添加了标准化的程序数据输出 避免了ZipPack中的信息显示窗口被关闭 指定插件设置窗口输出的设置数据的编码